@@ -287,6 +287,27 @@ if test "$tcl_cv_findex_enums" = "no"; then
             [Defined when enums are missing from winbase.h])
 fi
 
+# See if MWMO_ALERTABLE is missing from winuser.h
+# This is known to be a problem with Mingw.
+
+AC_CACHE_CHECK(for MWMO_ALERTABLE in winuser.h,
+    tcl_cv_mwmo_alertable,
+AC_TRY_COMPILE([
+#define WIN32_LEAN_AND_MEAN
+#include <windows.h>
+#undef WIN32_LEAN_AND_MEAN
+],
+[
+  int i = MWMO_ALERTABLE;
+],
+        tcl_cv_mwmo_alertable=yes,
+        tcl_cv_mwmo_alertable=no)
+)
+if test "$tcl_cv_mwmo_alertable" = "no"; then
+    AC_DEFINE(HAVE_NO_MWMO_ALERTABLE, 1,
+            [Defined when MWMO_ALERTABLE is missing from winuser.h])
+fi
+
 #--------------------------------------------------------------------
 # Determines the correct binary file extension (.o, .obj, .exe etc.)
 #--------------------------------------------------------------------
